# Homeworks

./: .gitignore  Makefile  in_out_array.cpp  out.txt
IDE/: in_out_array.cpp
abstraction_encapsulation/task1/: main.cpp  out.txt
abstraction_encapsulation/task2/: Makefile  main.cpp  out.txt
algorithms_data_structures/task2/: main
building_connecting_libs/task1/: CMakeLists.txt  Greeter.cpp  Greeter.h  main.cpp
building_connecting_libs/task3/: CMakeLists.txt  Leaver.cpp  Leaver.h  main.cpp
building_connecting_libs/task5/: CMakeLists.txt  Parallelogram.h  Quadrilateral.h  Rectangle.cpp  Square.h  figure.cpp  figure.h  main.cpp  right_triangle.h
class_object/task1/: main  main.cpp
class_object/task2/: main  main.cpp
cmake/task1/: CMakeLists.txt  main.cpp
cmake/task2/: CMakeLists.txt  Parallelogram.cpp  Rhombus.cpp  Square.cpp  right_triangle.cpp  triangle.cpp  triangle.h
database/postgresql_libqpxx/: CMakeLists.txt  client_manager.cxx  client_manager.hxx  database.cxx  database.hxx  main.cxx
exceptions/task1/: main  main.cpp
exceptions/task2/: EquilateralTriangle.cpp  Exception.cpp  Exception.h  IsoscelesTriangle.cpp  Makefile  Parallelogram.cpp  Quadrilateral.cpp  Rectangle.cpp  Rhombus.cpp  Rhombus.h  Square.cpp  figure  figure.h  right_triangle.cpp  right_triangle.h  source.cpp  triangle.cpp
ide/Task_1/: in_out_array
inheritance_polymorphism/task1/: main  main.cpp
inheritance_polymorphism/task2/: main  main.cpp
inheritance_polymorphism/task3/: main  main.cpp
multifile_projects_libs/task1/: Makefile  math  math.cpp  math.h  source.cpp
multifile_projects_libs/task2/: Makefile  calc  calculator.cpp  calculator.h  source.cpp
multifile_projects_libs/task3/: EquilateralTriangle.cpp  EquilateralTriangle.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Makefile  Parallelogram.h  Quadrilateral.cpp  Rectangle.h  Rhombus.h  Square.h
multithreading_asynchronous/refactoring/: CMakeLists.txt  circle.cxx  circle.hxx  cube.cxx  cube.hxx  cylinder.cxx  cylinder.hxx  line.cxx  line.hxx  main.cxx  shape.cxx  shape.hxx  square.cxx  square.hxx  transform.cxx  transform.hxx
operator_overloading/task1/: CMakeLists.txt  main.cpp
operator_overloading/task2/: main.cpp
preprocessor_macros/task1/: Makefile  main.cpp
preprocessor_macros/task2/: main  main.cpp
qt/modules_qt/task1/: CMakeLists.txt  main.cxx
qt/qt_concurrent/: mainwindow.cpp
qt/qt_tcp/: mainwindow.cpp  tcpclient.cpp
qt/qt_udp/: CMakeLists.txt  (+5 more)
tests_python/: test.py
(+175 files in other folders)
